--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=rzsian
 DB_USERNAME=root
-DB_PASSWORD=djdakAKLjk#$$@#232323ITlkasdks:_$ldkld;kdfdsf1234567890dsfsdfsdfsdf
+DB_PASSWORD=null
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
